# neuron-architecture

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  EXPERIMENTS.md  LICENSE  README.md  agent_demo_output.txt  agent_demo_v2.txt  budget_2000_plan.md  budget_3000_plan.md  computational_limits.md  constraint_agent.py  constraint_shaping_engine.py  hardware_deep_analysis.md  llm_architecture_improvement.md  llm_vs_brain_analysis.md  mvp_sch_pc.py  mvp_sch_pc_v2.py  mvp_sch_pc_v3.py  mvp_sch_pc_v4.py  mvp_sch_pc_v5_1_hm.py  mvp_sch_pc_v5_hm.py  mvp_sch_pc_v6_1_ng_esb.py  mvp_sch_pc_v6_2_da.py  mvp_sch_pc_v6_ng_esb.py  mvp_sch_pc_v7_integrated.py  novel_architecture_derivation.md  pyproject.toml  requirements.txt  run_all_experiments.py  test_agent_demo.py  tstn_implementation.py  tutorial_learner.py
.github/workflows/: ci.yml
docs/: DEEP_ANALYSIS.py
examples/: demo.ipynb  quickstart.py
experiments/: minimal_validation.py  rigorous_comparison.py  sequential_mnist_2m.py  sequential_mnist_2m_v2.py
results/: comprehensive_review.md  extreme_test_analysis.md  jepa_comparison.md  multidimensional_critical_review.md
src/neuron_arch/: __init__.py  esb.py  hm.py  integrated.py  ng.py  pc.py  sch.py
src/neuron_arch_torch/: __init__.py  esb_torch.py  jepa_style.py  ng_torch.py  pc_torch.py  sch_torch.py
tests/: extreme_testing.py  jepa_final_report.py  test_jepa_validation.py  test_neurons.py  test_torch_improvements.py
