[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuron-architecture"
version = "1.0.0"
description = "Novel Neuron Architectures for Overcoming LLM Limitations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {email = "aiwuweijie@foxmail.com"}
]
keywords = [
    "neuroscience",
    "spiking-neural-networks",
    "predictive-coding",
    "continual-learning",
    "neuromodulation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/wuweijie32540572/neuron-architecture"
Documentation = "https://github.com/wuweijie32540572/neuron-architecture/blob/main/README.md"
Repository = "https://github.com/wuweijie32540572/neuron-architecture"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=neuron_arch"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
